# openevals

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  docs.yml  release.yml  tests.yml
configs/: benchmark_config.yaml
docs/: api_docs.md  conf.py  contributing.rst  data_loading.rst  evaluation_metrics.rst  index.rst  installation.rst  leaderboard.rst  quickstart.rst
docs/api/: index.rst
examples/: advanced_usage.py  basic_usage.py
gemma_benchmark/: auth.py
gemma_benchmark/core/: benchmark.py  interfaces.py  model_loader.py
gemma_benchmark/scripts/: download_data.py  run_benchmark.py
gemma_benchmark/tasks/: arc.py  efficiency.py  gsm8k.py  humaneval.py  mmlu.py  truthfulqa.py
gemma_benchmark/utils/: config_validation.py  data-downloader.py  data_downloader.py  metrics.py
gemma_benchmark/visualization/: charts.py  leaderboard.py
openevals/: auth.py
openevals/core/: benchmark.py  interfaces.py  model_loader.py
openevals/scripts/: download_data.py  run_benchmark.py
openevals/tasks/: arc.py  efficiency.py  gsm8k.py  humaneval.py  mmlu.py  truthfulqa.py
openevals/utils/: auth.py  config_validation.py  data_downloader.py  metrics.py
openevals/visualization/: charts.py  leaderboard.py
tests/: __init__.py  test_core.py  test_tasks.py
web/: README.md
web/backend/: .gitignore  requirements.txt
web/backend/app/: __init__.py  main.py
web/backend/app/api/v1/: __init__.py  benchmarks.py  models.py  tasks.py  websocket.py
web/backend/app/models/: __init__.py  benchmark.py  database.py
web/backend/app/schemas/: __init__.py  benchmark.py
web/backend/app/services/: __init__.py  benchmark_service.py
web/backend/app/utils/: __init__.py  benchmark_adapter.py
web/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/frontend/src/app/: globals.css  layout.tsx
web/frontend/src/app/dashboard/: layout.tsx  page.tsx
web/frontend/src/app/dashboard/benchmarks/: page.tsx
web/frontend/src/app/dashboard/benchmarks/[id]/: page.tsx
web/frontend/src/app/dashboard/benchmarks/new/: page.tsx
web/frontend/src/app/dashboard/leaderboard/: page.tsx
web/frontend/src/app/dashboard/models/: page.tsx
web/frontend/src/app/dashboard/results/: page.tsx
web/frontend/src/app/dashboard/tasks/: page.tsx
web/frontend/src/components/charts/: performance-chart.tsx  radar-chart.tsx
web/frontend/src/components/layout/: header.tsx  sidebar.tsx
web/frontend/src/components/magic/: animated-gradient.tsx  shimmer-button.tsx  spotlight-card.tsx
web/frontend/src/components/ui/: progress.tsx
web/frontend/src/hooks/: use-websocket.ts
web/frontend/src/lib/: api.ts
web/frontend/src/stores/: benchmark-store.ts
